--- a/Bootstrap/change-item-order-on-mobile.html
+++ b/Bootstrap/change-item-order-on-mobile.html
@@ -31,10 +31,11 @@
 				<div class="order-md-2 order-3 col-md-6 box">Item 2</div>
 				<div class="order-md-3 order-4 col-md-6 box">Item 3</div>
 				<div class="order-md-4 order-2 col-md-6 box">Item 4</div>
+				<div class="order-md-4 order-5 col-md-6 box">Item 5</div>
 			</div>
 			<div class="row mt-5">
 				<div class="col">
-					<p>These 4 boxes containing item 1, 2, 3 and 4 will be shown in this order on a mobile device: 1, 4, 2, 3 </p>
+					<p>These 5 boxes containing item 1, 2, 3 ,4 and 5 will be shown in this order on a mobile device: 1, 4, 2, 3 ,5 </p>
 				</div>
 			</div>
 		</div>
